2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer/SqlServerFeatureSource.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs: api clean up

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.InteractiveMap/Cumberland.InteractiveMap.csproj,
	  cumberland.sln: remove opengl projects

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.Data.SqlServer/SqlServerFeatureSource.cs,
	  Cumberland.Data.PostGIS/PostGISFeatureSource.cs: add ability to use
	  subqueries

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TilePyramidGenerator/Main.cs: again

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TilePyramidGenerator/Main.cs: fix help

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* cumberland.sln: remove website

2008-11-09  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TilePyramidGenerator/Cumberland.TilePyramidGenerator.csproj,
	  Cumberland.TilePyramidGenerator/Main.cs,
	  Cumberland.DrawMap/Cumberland.DrawMap.csproj,
	  Cumberland.TileViewerTest/Cumberland.TileViewerTest.csproj: move
	  stuff around
	* Cumberland.DrawMap/AssemblyInfo.cs,
	  Cumberland.Drawing.OpenGL/AssemblyInfo.cs,
	  Cumberland.Data.SqlServer/AssemblyInfo.cs,
	  Cumberland.Data.PostGIS/AssemblyInfo.cs: set version
	* Cumberland.InteractiveMap/AssemblyInfo.cs: bump version
	* cumberland.sln: move stuff
	* Cumberland.Data.SqlServer/SqlServerFeatureSource.cs: throw exception
	  on unsupported geom type

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TileViewerTest/Cumberland.TileViewerTest.csproj: switch
	  output type

2008-11-08  Scott Ellington <scott.ellington@gmail.com> 

	* Cumberland.TilePyramidGenerator/Main.cs: cleanup language
	* Cumberland.Data.SqlServer/Cumberland.Data.SqlServer.csproj,
	  Cumberland.Data.PostGIS/Cumberland.Data.PostGIS.csproj,