@@ -1,3 +1,9 @@
+2008-11-10  Scott Ellington <scott.ellington@gmail.com> 
+
+	* Layer.cs, Map.cs, Line.cs, Point.cs, AssemblyInfo.cs, Ring.cs,
+	  Style.cs, Data/IFeatureSource.cs, Cumberland.csproj,
+	  Projection/SphericalMercatorProjector.cs: cleanup
+
 2008-11-09  Scott Ellington <scott.ellington@gmail.com> 
 
 	* Polygon.cs, PolyLine.cs, Data/Shapefile/Shapefile.cs: api clean up
